--- a/TODO
+++ b/TODO
@@ -1,60 +1,73 @@
-BUGS
-====
+/** \page manualtodo manual Todolist
+\section bugs BUGS
 
 These should be fixed as soon as possible as they crash the binary or
 seriously affect gameplay.
 
- * [5] news video is not clipped, green band appears (pace, linux).
- * [3] aipur.c(RDafford):562, class == 2 && MaxRD == 80 && Safety == 90 (???).
+ \bug * [5] news video is not clipped, green band appears (pace, linux).
 
-NOT IMPLEMENTED
-===============
+ \bug * [3] aipur.c(RDafford):562, class == 2 && MaxRD == 80 && Safety == 90 (???).
+
+\section notimplemented NOT IMPLEMENTED
 
 Features present in the original BARIS but not implemented or not working
 properly in Race Into Space.
 
- * [5] Autosave does work, but reloading the game after failures does not
+ \todo * [5] Autosave does work, but reloading the game after failures does not
  bring back the prestige lost (look at president's ranking).
- * [5] Configuration option for still images instead of videos (do we need it?)
 
-ENCHANCEMENTS
-=============
+ \todo * [5] Configuration option for still images instead of videos (do we need it?)
+
+\section enhancements ENCHANCEMENTS
 
 Incremental enchancements that would improve quality of software but do not
 change anything considered essential to playability. This includes code
 refactoring as well.
 
- * [9] Reduce dependencies between game logic and game engine.
- * [5] Remove temporary files on exit.
- * [5] Remove extra gr_sync calls.
- * [5] Preload next frame during mission playback.
- * [5] Newscaster animations and sounds should be better synced.
- * [5] Music is too loud during newscasts (pace, linux)
- * [5] Bar graphs during mission tests pause audio and video.
- * [5] Baby pictures shown on missions are downsampled and upsampled.
- * [3] Optimize grPutPixel and grGetPixel (I'm not sure it's needed)
- * [3] Clipping in gx* routines.
+ \todo * [9] Reduce dependencies between game logic and game engine.
 
-EXTENSIONS
-==========
+ \todo * [5] Remove temporary files on exit.
+ 
+ \todo * [5] Remove extra gr_sync calls.
+
+ \todo * [5] Preload next frame during mission playback.
+
+ \todo * [5] Newscaster animations and sounds should be better synced.
+
+ \todo * [5] Music is too loud during newscasts (pace, linux)
+
+ \todo * [5] Bar graphs during mission tests pause audio and video.
+
+ \todo * [5] Baby pictures shown on missions are downsampled and upsampled.
+
+ \todo * [3] Optimize grPutPixel and grGetPixel (I'm not sure it's needed)
+
+ \todo * [3] Clipping in gx* routines.
+
+\section extension EXTENSIONS
 
 Improvements that might change rules and/or gameplay balance.
 
  * Plenty of them, just look at
  http://www.baris-online.net/wiki/index.php/Enhancements
 
-CODE REFACTORING
-================
+\section refactor CODE REFACTORING
 
- * [9] Comment undocumented game-logic structures.
- * [7] Remove "magic numbers" (at least as many as possible).
- * [7] Reduce number and visibility of global variables, rename some.
- * [7] Move game strings into a separate string table or file.
- * [5] Clean up header files, separate functionality.
- * [5] Factor video display code out from mis_c.c and replay.c
+ \todo * [9] Comment undocumented game-logic structures.
 
-OTHER IDEAS
-===========
+ \todo * [7] Remove "magic numbers" (at least as many as possible).
 
- * Release checklist: valgrind, electric fence, CFLAGS=-O2 -DNDEBUG
+ \todo * [7] Reduce number and visibility of global variables, rename some.
+
+ \todo * [7] Move game strings into a separate string table or file.
+
+ \todo * [5] Clean up header files, separate functionality.
+
+ \todo * [5] Factor video display code out from mis_c.c and replay.c
+
+\section other OTHER IDEAS
+
+ \todo * Release checklist: valgrind, electric fence, CFLAGS=-O2 -DNDEBUG
 Everything that does not fit into previous sections.
+
+*/
