--- a/README
+++ b/README
@@ -65,6 +65,8 @@ Race into Space is the free software version of Interplay's Buzz Aldrin's Race i
     game  file  and  your  system information  (os  version,  libraries,
     environment variables, command line arguments, etc.)
 
-\section development 3. Development: see file DEVELOPER.
+\section development 3. Development
+
+    see file DEVELOPER.
 
 */
