--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-02  Fabian S. <fabguy@users.sourceforge.net>
+
+	* V203
+
+	* main.c, ast1.c: Documentation
+
 2007-09-30  Fabian S. <fabguy@users.sourceforge.net>
 
 	* V202
