--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-08-20	Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* V208
+
+	* log4c.h (_LOG_PRE): fix for systems where va_args is array type.
+
+	* multiple files: make gcc -pedantic -std=c99 compile cleanly
+
 2008-01-10	Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
 
 	* V207
