--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2008-08-23	Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* V209
+
+	* endianness.c (SwapGameDat): use internal _SwapXXX functions
+
+	* endianness.c: new _SwapFloat() function
+
+	* endianness.h: new SwapFloat() macro
+
+	* port.c (SpotColor): use SwapFloat() to avoid pointer aliasing
+
 2008-08-20	Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
 
 	* V208
