--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-08-25	Michael McCarty <mkmccarty@raceintospace.org>
+
+	* V215
+
+	* DEVELOPER: added additional OSX notes
+
+	* os_macosx: Added libraries to Xcode project
+
 2008-08-24	Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
 
 	* V214
