2008-08-15  Michael McCarty <mkmccarty@raceintospace.org>
	* V216

	* macros.h: Added PROGRAM_NOT_STARTED define
		    Added IsHumanPlayer() macro

	* proto.h: Removed AIQUnit, renamed QUnit to QueryUnit

	* rdplex.c: Renamed QUnit to QueryUnit, made this function more readable ,added logic to not draw for AI players so I could remove AIQunit()
		    Using PROGRAM_NOT_STARTED during Equipment[].Num tests

	* aipur.c: Removed AIQUnit, changed hwx and unx to something understandable

	* vab.c: Using PROGRAM_NOT_STARTED during Equipment[].Num tests

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+2008-08-15  Michael McCarty <mkmccarty@raceintospace.org>
+
+	* V216
+
+	* macros.h: Added PROGRAM_NOT_STARTED define
+		    Added IsHumanPlayer() macro
+
+	* proto.h: Removed AIQUnit, renamed QUnit to QueryUnit
+
+	* rdplex.c: Renamed QUnit to QueryUnit, made this function more readable ,added logic to not draw for AI players so I could remove AIQunit()
+		    Using PROGRAM_NOT_STARTED during Equipment[].Num tests
+
+	* aipur.c: Removed AIQUnit, changed hwx and unx to something understandable
+
+	* vab.c: Using PROGRAM_NOT_STARTED during Equipment[].Num tests
+
 2008-08-25	Michael McCarty <mkmccarty@raceintospace.org>
 
 	* V215
