--- a/README
+++ b/README
@@ -1,7 +1,11 @@
 /**
 \mainpage Race into Space
 
-Race into Space is the free software version of Interplay's Buzz Aldrin's Race into Space. This is the reworked version following the source release for the computer version of the Liftoff! board game by Fritz Bronner. This was developed by Strategic Visions and published by Interplay in as a disk based game in 1992 and a cd-rom in 1994.
+Race  into  Space is  the  free  software  version of  Interplay's  Buzz
+Aldrin's Race  into Space.  This is the  reworked version  following the
+source release  for the computer version  of the Liftoff! board  game by
+Fritz Bronner.  This was developed by Strategic Visions and published by
+Interplay as a disk-based game in 1992 and a cd-rom in 1994.
 
 \page readme README
 
