--- a/AUTHORS
+++ b/AUTHORS
@@ -2,7 +2,7 @@
  *	\section original Original game
  *	The original  game was computer  version of  the Liftoff! board  game by
  *	Fritz  Bronner. It  was  developed  by  Fritz  and  Michael  McCarty  at
- *	Strategic Visions and published by Interplay  in as a disk based game in
+ *	Strategic Visions and published by Interplay  as a disk based game in
  *	1992 and a CD-ROM in 1994.
  *	
  *	\section The open-source version
@@ -10,7 +10,7 @@
  *
  *	\li Michael K McCarty <mkmccarty@raceintospace.org>
  *	\li Pace Willisson <pace@alum.mit.edu>
- *	\li Krzysztof Kosciuszkiewicz <k.kosciuszkiewicz@gmail.com>
+ *	\li Krzysztof Kosciuszkiewicz <drvee@users.sf.net>
  *	\li Will Glynn <delta407@lerfjhax.com>
  *
  */
