--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-09-26	Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
+
+	* V222
+
+	* endianness.c, endianness.h: added _SwapEquipment(), fix one mistake
+
 2008-08-29	Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
 
 	* V221
